--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-size": "^2.0.0",
     "gulp-uglifyjs": "^0.6.2",
@@ -26,7 +29,6 @@
     "gulp-watch": "^4.3.5",
     "jquery": "^2.2.1",
     "lodash": "^4.5.1",
-    "sass": "^0.5.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-dev-server": "^1.14.1",
