--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
+    "gulp-sequence": "^0.4.5",
     "gulp-size": "^2.0.0",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.7",
