--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "backbone": "^1.2.3",
+    "backbone-fetch-cache": "^2.0.1",
     "backbone-jsonapi": "^0.1.6",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
@@ -32,6 +33,7 @@
     "gulp-watch": "^4.3.5",
     "jquery": "^2.2.1",
     "lodash": "^4.5.1",
+    "moment": "^2.12.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-dev-server": "^1.14.1",
